<resources>
    <string name="app_name">StarNavigator</string>
    <string name="user_name">Username</string>
    <string name="user_pass">Password</string>
    <string name="button_login">Log in</string>
    <string name="coord_sphere">Spherical</string>
    <string name="coord_cube">Cubic</string>
    <string name="coord_ra">Right ascension</string>
    <string name="coord_dec">Declination</string>
    <string name="coord_dist">Distance</string>
    <string name="star_name">Name</string>
    <string name="coord">Coordinates</string>
    <string name="title_add_star">Add New Star</string>
    <string name="unit_ly">LY</string>
    <string name="unitname_ly">Light year</string>
    <string name="unitname_ly_pl">Light years</string>
    <string name="unitname_deg">Degrees</string>
    <string name="unitname_h">Hours</string>
    <string name="spectre">Spectral class</string>
    <string name="button_create">Create</string>
    <string name="create_log_correct">Added star</string>
    <string name="create_log_missing">Error: missing some parameter(s)</string>
    <string name="create_log_repeated">Error: star with this name already saved</string>
    <string name="settings">Settings</string>
    <string name="login_log_ok">Login correct</string>
    <string name="login_err_user">User not found</string>
    <string name="login_err_pass">Wrong password</string>
    <string name="sol">The Sun</string>
    <string name="title_welcome_morning">"Good morning "</string>
    <string name="title_welcome_afternoon">"Good afternoon "</string>
    <string name="title_welcome_evening">"Good evening "</string>
    <string name="title_welcome_location">Nearest Stars</string>
    <string name="btn_home">Home</string>
    <string name="btn_list">List</string>
    <string name="btn_form">Add</string>
    <string name="btn_delete_user">Delete user-added</string>
    <string name="btn_delete_all">Delete all data</string>
    <string name="title_custom_stars">"added by user: "</string>
    <string name="title_total_stars">"Total stars loaded: "</string>
    <string name="confirm_delete_title">Confirm data deletion</string>
    <string name="restore_button">Restore default data</string>
    <string name="restore_message">The default set of 17 stars has been restored</string>
    <string name="delete_all_message">All stars on database have been deleted</string>
    <string name="delete_custom_message">All stars added by user have been deleted</string>
    <string name="button_logout">Log out</string>
    <string name="conf_decimal_prec">Decimal precision</string>
    <string name="example">Example</string>
    <string name="info_localStar">Local star</string>
    <string name="info_localStarVerbose">Spherical coordinates make no sense seen from the star you are located in.</string>
    <string name="prefs_clear">Clear all settings</string>
    <string name="confirm_delete_body" formatted="true">Going to delete %1$d stars</string>
    <string name="confirm_delete_body_one">Going to delete one star</string>
    <string name="delete_no_data">There is no data to delete</string>
    <string name="confirm_delete_settings">This will reset all settings and close the app</string>
    <string name="finger_prompt_title">Login with fingerprint</string>
    <string name="finger_prompt_cancel">Use password instead</string>
</resources>